# mediapipe-hand-py

./: README.md  main.py  process_hand_image.py  pyproject.toml
